# aiproject

./: .gitignore  AGENT.md  CASE_STUDY.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  cleanup.yml  release.yml
case-studies/: 02-bookmarks-cli-jan29.md  03-multi-model-comparison-jan30.md  04-long-term-context-jan30.md  README.md
docs/: CASE_STUDY.md  cheatsheet.md  concepts.md  getting-started.md  manual.md
packaging/homebrew/: aiproject.rb  proj.rb
packaging/npm/: package.json
packaging/npm/scripts/: install.js
src/: auto_update.rs  cli.rs  commit.rs  config.rs  database.rs  docs_db.rs  git.rs  main.rs  models.rs  paths.rs  schema.rs  schema_docs.rs  session.rs  source_analyzer.rs
src/commands/: archive.rs  backup.rs  check.rs  cleanup.rs  compress.rs  context.rs  dashboard.rs  delta.rs  docs.rs  enter.rs  export.rs  extend.rs  help.rs  init.rs  log.rs  migrate.rs  mod.rs  register.rs  registered.rs  release.rs  resume.rs  review.rs  rollback.rs  session.rs  shell.rs  snapshot.rs  status.rs  task.rs  uninstall.rs  update_check.rs  upgrade.rs
vscode/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: cli.ts  extension.ts  participant.ts  statusBar.ts  tools.ts
