[package]
name = "aiproject"
version = "1.7.11"
edition = "2021"
authors = ["John Deaton <john@victorysightsound.com>"]
description = "Project tracking and context management for AI-assisted development"
license = "MIT"
repository = "https://github.com/victorysightsound/aiproject"
readme = "README.md"
keywords = ["cli", "project-management", "ai", "context", "tracking"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[[bin]]
name = "proj"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
colored = "2"
dialoguer = "0.11"
indicatif = "0.17"
anyhow = "1"
thiserror = "1"
glob = "0.3"
sha2 = "0.10"
atty = "0.2"
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
